add final codes

--- a/bin/Dani/bert_ner/train_bert_from_db.ipynb
+++ b/bin/Dani/bert_ner/train_bert_from_db.ipynb
@@ -13,26 +13,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "df = pd.read_pickle('/content/labeled_sentences.pkl')\n",
-    "\n",
-    "id2label = {\n",
-    "    0: \"O\",  # Outside of a named entity\n",
-    "    1: \"B-drug\"\n",
-    "}\n",
-    "\n",
-    "label2id = {\n",
-    "    \"O\": 0,\n",
-    "    \"B-drug\": 1,\n",
-    "}\n",
-    "\n",
-    "tokens_train = [sent.split() for sent in df[0].values.tolist()]\n",
-    "ner_tags_train = [[label2id[ner_tag] for ner_tag in ner_tags] for ner_tags in df[1].values.tolist()]\n",
-    "\n",
-    "drugs_train = datasets.Dataset.from_pandas(pd.DataFrame([{'tokens' : data[0], 'ner_tags' : data[1]} for data in zip(tokens_train, ner_tags_train)]))\n",
-    "\n",
-    "drugs = datasets.DatasetDict({'train' : drugs_train})\n",
+    "from pymongo.mongo_client import MongoClient\n",
     "\n",
     "\n",
     "def tokenize_and_align_labels(examples):\n",
@@ -40,13 +21,13 @@
     "\n",
     "    labels = []\n",
     "    for i, label in enumerate(examples[f\"ner_tags\"]):\n",
-    "        word_ids = tokenized_inputs.word_ids(batch_index=i)  # Map tokens to their respective word.\n",
+    "        word_ids = tokenized_inputs.word_ids(batch_index=i)\n",
     "        previous_word_idx = None\n",
     "        label_ids = []\n",
-    "        for word_idx in word_ids:  # Set the special tokens to -100.\n",
+    "        for word_idx in word_ids:\n",
     "            if word_idx is None:\n",
     "                label_ids.append(-100)\n",
-    "            elif word_idx != previous_word_idx:  # Only label the first token of a given word.\n",
+    "            elif word_idx != previous_word_idx:\n",
     "                label_ids.append(label[word_idx])\n",
     "            else:\n",
     "                label_ids.append(-100)\n",
@@ -79,11 +60,41 @@
     "    }\n",
     "\n",
     "\n",
+    "# MongoDB connection\n",
+    "uri = \"mongodb://danielsz:ysDC3xbgKOj863d7@ac-noqw4xe-shard-00-00.qqrkswo.mongodb.net:27017,ac-noqw4xe-shard-00-01.qqrkswo.mongodb.net:27017,ac-noqw4xe-shard-00-02.qqrkswo.mongodb.net:27017/?ssl=true&replicaSet=atlas-3kz2n9-shard-0&authSource=admin&retryWrites=true&w=majority\"\n",
     "\n",
+    "client = MongoClient(uri)\n",
+    "db = client['dsp']\n",
+    "training_collection = db['reddit_training']\n",
+    "\n",
+    "\n",
+    "# Send a ping to confirm a successful connection\n",
+    "try:\n",
+    "    client.admin.command('ping')\n",
+    "    print(\"Pinged your deployment. You successfully connected to MongoDB!\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "\n",
+    "\n",
+    "id2label = {\n",
+    "    0: \"O\",\n",
+    "    1: \"B-drug\"\n",
+    "}\n",
+    "\n",
+    "label2id = {\n",
+    "    \"O\": 0,\n",
+    "    \"B-drug\": 1,\n",
+    "}\n",
+    "\n",
+    "# Load the dataset from MongoDB\n",
+    "drugs_train = datasets.Dataset.from_pandas(pd.DataFrame(list(training_collection.find({'bert_training': 'train'},{'_id' : 0}))))\n",
+    "drugs_val = datasets.Dataset.from_pandas(pd.DataFrame(list(training_collection.find({'bert_training': 'validation'},{'_id' : 0}))))\n",
+    "drugs_test = datasets.Dataset.from_pandas(pd.DataFrame(list(training_collection.find({'bert_training': 'test'},{'_id' : 0}))))\n",
+    "\n",
+    "drugs = datasets.DatasetDict({'train' : drugs_train, 'validation' : drugs_val, 'test' : drugs_test})\n",
     "label_list = list(label2id.keys())\n",
-    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "\n",
     "tokenized_drugs = drugs.map(tokenize_and_align_labels, batched=True)\n",
     "\n",
     "seqeval = evaluate.load(\"seqeval\")\n",
@@ -94,7 +105,7 @@
     "\n",
     "model = TFAutoModelForTokenClassification.from_pretrained(\"bert-base-uncased\", num_labels=2, id2label=id2label, label2id=label2id)\n",
     "\n",
-    "import datasets\n",
+    "\n",
     "tf_train_set = model.prepare_tf_dataset(\n",
     "    tokenized_drugs[\"train\"],\n",
     "    shuffle=True,\n",
@@ -103,30 +114,52 @@
     "    prefetch = False\n",
     ")\n",
     "\n",
+    "tf_val_set = model.prepare_tf_dataset(\n",
+    "    tokenized_drugs[\"validation\"],\n",
+    "    shuffle=False,\n",
+    "    batch_size=32,\n",
+    "    collate_fn=data_collator,\n",
+    "    prefetch = False\n",
+    ")\n",
+    "\n",
+    "tf_test_set = model.prepare_tf_dataset(\n",
+    "    tokenized_drugs[\"test\"],\n",
+    "    shuffle=False,\n",
+    "    batch_size=32,\n",
+    "    collate_fn=data_collator,\n",
+    "    prefetch = False\n",
+    ")\n",
+    "\n",
     "\n",
     "batch_size = 32\n",
-    "num_train_epochs = 3\n",
+    "num_train_epochs = 5\n",
     "num_train_steps = (len(tokenized_drugs[\"train\"]) // batch_size) * num_train_epochs\n",
     "optimizer, lr_schedule = create_optimizer(\n",
     "    init_lr=2e-4,\n",
     "    num_train_steps=num_train_steps,\n",
-    "    weight_decay_rate=0.01,\n",
+    "    weight_decay_rate=0.1,\n",
     "    num_warmup_steps=0,\n",
     ")\n",
     "\n",
-    "model.compile(optimizer=optimizer)  # No loss argument!\n",
-    "# loss=tf.keras.losses.SparseCategoricalCrossentropy(ignore_class=-100)\n",
+    "model.compile(optimizer=optimizer) \n",
+    "metric_callback = KerasMetricCallback(metric_fn=compute_metrics, eval_dataset=tf_val_set)\n",
     "\n",
-    "metric_callback = KerasMetricCallback(metric_fn=compute_metrics, eval_dataset=tf_train_set)\n",
+    "\n",
+    "'''\n",
+    "Callback to push the model to the hub for later use\n",
     "\n",
     "push_to_hub_callback = PushToHubCallback(\n",
     "    output_dir=\"drugobert_spec\",\n",
     "    tokenizer=tokenizer,\n",
     "    hub_model_id=\"drugobert_spec\")\n",
+    "'''\n",
+    "\n",
     "\n",
     "callbacks = [metric_callback]\n",
+    "history = model.fit(x=tf_train_set, validation_data = tf_val_set, epochs=num_train_epochs, callbacks=callbacks)\n",
+    "eval = model.evaluate(tf_test_set)\n",
     "\n",
-    "model.fit(x=tf_train_set, epochs=10, callbacks=callbacks)"
+    "\n"
    ]
   }
  ],
