--- a/bin/Dani/data_processing/preprocess_data.ipynb
+++ b/bin/Dani/data_processing/preprocess_data.ipynb
@@ -56,28 +56,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add actual drug names to the list (keys of drug dict)\n",
-    "\n",
-    "drug_keys = list(drug_dict.keys())\n",
-    "drug_values = list(set(drug_dict.values()))\n",
-    "drug_list = drug_keys + drug_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_list_clean = [re.sub(r'[^a-zA-Z0-9 ]', '', drug) for drug in drug_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -123,9 +101,6 @@
     "data = list(raw_collection.find())\n",
     "\n",
     "\n",
-    "with open('drug_dictionary.json') as f:\n",
-    "    drug_dict = json.load(f)\n",
-    "\n",
     "sentiments = {'neutral': 0, 'positive': 1, 'negative': -1}\n",
     "\n",
     "drug_keys = list(drug_dict.keys())\n",
@@ -162,7 +137,7 @@
     "\n",
     "\n",
     "    occurrences = []\n",
-    "    for expression in drug_list:\n",
+    "    for expression in drug_list_clean:\n",
     "        if re.search(r'\\b' + re.escape(expression) + r'\\b', comment):\n",
     "            occurrences.append(expression)\n",
     "\n",
